--- a/templates/alumnos/form.html
+++ b/templates/alumnos/form.html
@@ -18,8 +18,8 @@
             {% csrf_token %}
             {% for field in form %}
                 <div class="form-group">
-                    <label for="{{ field.id_for_label }}" class="col-md-3 control-label">{{ field.label }}</label>
-                    <div class="col-md-6">
+                    <label for="{{ field.id_for_label }}" class="col-sm-4 col-lg-3 col-lg-offset-1 control-label">{{ field.label }}</label>
+                    <div class="col-sm-7 col-lg-6">
                         {{ field }}
                     </div>
                 </div>
