--- a/templates/base.html
+++ b/templates/base.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://file.myfontastic.com/UCSA6zJoHpkwJJWxFCKcnK/icons.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>{% block title %}{% endblock title %}</title>
     {% block css %}{% endblock css %}
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid">
         {% block navbar %}
             <nav class="navbar navbar-default">
                 <div class="container-fluid">
