--- a/templates/alumnos/fisicos/list.html
+++ b/templates/alumnos/fisicos/list.html
@@ -1,4 +1,4 @@
-{% extends "../base.html" %}
+{% extends "../../base.html" %}
 
 {% block title %}Reporte{% endblock title %}
 
@@ -6,12 +6,13 @@
 
 {% block breadcrumb %}
     <ul class="breadcrumb">
-        <li class="active">Alumnos</li>
+        <li><a href="{% url 'alumnos:list' %}">Alumnos</a></li>
+        <li class="active">Datos Físicos</li>
     </ul>
 {% endblock breadcrumb %}
 
 {% block content %}
-    <h4>Filtrar por:</h4>
+    <!--<h4>Filtrar por:</h4>
         <form method="get">
             <p>
                 Boleta: &nbsp {{ filter.form.boleta }} &nbsp
@@ -20,18 +21,18 @@
                 Apellido Materno: &nbsp {{ filter.form.apellido_materno }} &nbsp;&nbsp;
                 <button class="btn btn-success" type="submit">Filtrar</button>
             </p>
-        </form>
+        </form>-->
     <table class="table table-striped table-hover">
         <thead>
             <tr>
                 <th class="text-center"><p>#</p></th>
-                <th class="text-center"><p>Boleta</p></th>
                 <th class="text-center"><p>Nombre</p></th>
                 <th class="text-center">Estatura<br />(m)</th>
                 <th class="text-center">Peso<br />(kg)</th>
                 <th class="text-center">Circunferencia de la cintura<br />(cm)</th>
                 <th class="text-center">Frecuencia cardiaca en reposo<br />(latidos / minuto)</th>
                 <th class="text-center">Presión arterial<br />(mm Hg)</th>
+                <th class="text-center"><p>Fecha</p></th>
                 <th class="text-center info"><p>Acciones</p></th>
             </tr>
         </thead>
@@ -39,18 +40,18 @@
             {% for alumno in alumnos %}
                 <tr>
                     <td class="text-center">{{ forloop.counter }}</td>
-                    <td class="text-center"><a href="{% url 'alumnos:detail' alumno.id %}" class="btn btn-success btn-xs" title="Ver alumno">{{ alumno.boleta }}</a></td>
-                    <td>{{ alumno.apellido_paterno|title }} {{ alumno.apellido_materno|title }} {{ alumno.nombre|title }}</td>
-                    <td class="text-center">{{ asistencia.estatura }}</td>
+                    <td class="text-center"><a href="{% url 'alumnos:detail_fisicos' alumno.id %}" class="btn btn-success btn-xs" title="Ver alumno">{{ alumno.alumno|title }}</a></td>
+                    <td class="text-center">{{ alumno.estatura }}</td>
                     <td class="text-center">{{ alumno.peso }}</td>
                     <td class="text-center">{{ alumno.circunferencia_cintura }}</td>
                     <td class="text-center">{{ alumno.frecuencia_reposo }}</td>
                     <td class="text-center">{{ alumno.presion_arterial }}</td>
-                    <td class="text-center">
-                        <a href="{% url 'alumnos:update' alumno.id %}" title="Editar">
+                    <td class="text-center">{{ alumno.fecha }}</td>
+                    <td class="text-center">    
+                        <a href="{% url 'alumnos:update_fisicos' alumno.id %}" title="Editar">
                             <i class="icon-edit color-blue fs-15"></i>
                         </a>
-                        <a href="{% url 'alumnos:delete' alumno.id %}" title="Borrar">
+                        <a href="{% url 'alumnos:delete_fisicos' alumno.id %}" title="Borrar">
                             <i class="icon-delete color-red fs-15"></i>
                         </a>
                     </td>
