--- a/static/css/main/creative.css
+++ b/static/css/main/creative.css
@@ -53,7 +53,7 @@ p {
   color: rgba(255, 255, 255, 0.7);
 }
 section {
-  padding: 500px 0;
+  padding: 50px 0;
 }
 aside {
   position: auto;
@@ -156,7 +156,7 @@ header {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: url('../img/header.jpg');
+  background-image: url('/static/img/header.jpg');
   text-align: center;
   color: white;
 }
