--- a/templates/base.html
+++ b/templates/base.html
@@ -1,65 +1,138 @@
 {% load staticfiles %}
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://file.myfontastic.com/UCSA6zJoHpkwJJWxFCKcnK/icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <title>{% block title %}{% endblock title %}</title>
-    {% block css %}{% endblock css %}
-</head>
-<body>
-    <div class="container-fluid">
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="escuela fit">
+        <meta name="keywords" content="ipn, upiicsa, ejercicios, nutricion, clima">
+        <!-- Icon -->
+        <link rel="icon" href="{% static 'img/icon.png' %}">
+        <!-- Fontastic -->
+        <!-- <link href="https://file.myfontastic.com/UCSA6zJoHpkwJJWxFCKcnK/icons.css" rel="stylesheet"> -->
+        <!-- Bootstrap -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <!-- Custom Fonts -->
+        <link href="{% static 'vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+        <!-- Magnific Popup -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
+        <!-- Theme CSS -->
+        <link href="{% static 'css/main/creative.css' %}" rel="stylesheet">
+        <!-- Static CSS -->
+        <!-- <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> -->
+        <!-- <link rel="stylesheet" href="{% static 'css/style.css' %}"> -->
+        <title>{% block title %}{% endblock title %}</title>
+
+        {% block css %}{% endblock css %}
+
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <![endif]-->
+    </head>
+    <body id="page-top">
         {% block navbar %}
-            <nav class="navbar navbar-default">
+            <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
                 <div class="container-fluid">
+                    <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
+                            <span class="sr-only">Toggle navigation</span> Menú <i class="fa fa-bars"></i>
                         </button>
-                        <a class="navbar-brand" href="{% url 'index' %}">Escuela Fit</a>
+                        <a class="navbar-brand page-scroll" href="#page-top"> <img src="{% static 'img/logo.png' %}" width="200" height="30"> </a>
                     </div>
 
+                    <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav">
-                            <li {% block nav_pase_lista %}{% endblock %}><a href="{% url 'pase_lista:index' %}">Pase de Lista <span class="sr-only">(current)</span></a></li>
-                            <li class="dropdown {% block nav_alumnos %}{% endblock %}">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Alumnos <span class="caret"></span></a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><b>&nbsp;&nbsp;Datos Personales</b></li>
-                                    <li><a href="{% url 'alumnos:create' %}">Nuevo</a></li>
-                                    <li><a href="{% url 'alumnos:list' %}">Reporte</a></li>
-                                    <li class="divider"></li>
-                                    <li><b>&nbsp;&nbsp;Datos Físicos</b></li>
-                                    <li><a href="{% url 'alumnos:create_fisicos' %}">Agregar</a></li>
-                                    <li><a href="{% url 'alumnos:list_fisicos' %}">Reporte</a></li>
-                                </ul>
-                            </li>
-                        </ul>
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#">Salir</a></li>
+                            <li>
+                                <a class="page-scroll" href="#about">Acerca de Escuela FIT</a>
+                            </li>
+                            <li>
+                                <a class="page-scroll" href="#services">Usando escuela FIT</a>
+                            </li>
+                            <li>
+                                <a class="page-scroll" href="#portfolio">RECOMENDACIONES DE NUTRICIÓN</a>
+                            </li>
+                            <li>
+                                <a class="page-scroll" href="#star">COMIENZA YA!</a>
+                            </li>
+                            <li>
+                                <a class="page-scroll" href="#contact">CONTACTO</a>
+                            </li>       
                         </ul>
                     </div>
+                    <!-- /.navbar-collapse -->
                 </div>
+                <!-- /.container-fluid -->
             </nav>
         {% endblock navbar %}
 
-        {% block breadcrumb %}{% endblock breadcrumb %}
-
         {% block content %}{% endblock content %}
-    </div>
 
-    <br /><br />
+        {% block contact %}
+            <section id="contact">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2 text-center">
+                            <h2 class="section-heading">CONTACTO</h2>
+                            <hr class="primary">
+                            <p>Para cualquier información contáctanos.</p>
+                        </div>
+                        <div class="col-lg-4 col-lg-offset-2 text-center">
+                            <i class="fa fa-phone fa-3x sr-contact"></i>
+                            <p><a href="tel:5550740951">55-50-74-09-51</a></p>
+                        </div>
+                        <div class="col-lg-4 text-center">
+                            <i class="fa fa-envelope-o fa-3x sr-contact"></i>
+                            <p><a href="mailto:escuela_fit@zoho.com">
+                            escuela_fit@zoho.com</a></p>
+                        </div>
+                        <div class="col-lg-8 col-lg-offset-2 text-center">
+                            <p><b>¡SIGUE NUESTRAS REDES SOCIALES!</b></p>
+                        </div>
+                        <div class="col-lg-4 col-lg-offset-2 text-center">
+                            <a href="https://www.facebook.com"><i class="fa fa-3x fa-facebook-square sr-contact"></i></a>
+                            <p>FACEBOOK</p>
+                        </div>
+                        <div class="col-lg-4 text-center text-center">
+                            <a href="https://www.youtube.com"><i class="fa fa-3x fa-youtube text-center sr-contact" aria-hidden="true"></i></a>
+                            <p>YOUTUBE</p>
+                        </div>
+                        <div class="col-xs-6 col-lg-6 text-center text-center">           
+                            <img src="{% static 'img/upiicsa.png' %}"  width="100" height="100" style="margin-left:20px">
+                        </div>
+                        <div class="col-xs-6 col-lg-6 text-center text-center">
+                            <img src="{% static 'img/logo_ipn.png' %}"  width="100" height="100" style="margin-left:20px">
+                        </div>                
+                    </div>
+                </div>
+            </section>
+        {% endblock contact %}
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    
-    {% block javascript %}{% endblock javascript %}
-</body>
+
+
+        <!-- JQuery -->
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+        <!-- Bootstrap -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <!-- ChartJS -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.bundle.min.js"></script>
+        <!-- JQuery Easing -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+        <!-- Magnific Popup -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+        <!-- Scroll Reveal -->
+        <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+        <!-- Theme JS -->
+        <script src="{% static 'js/creative.min.js' %}"></script>
+
+        {% block javascript %}{% endblock javascript %}
+    </body>
 </html>
