--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -1,77 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
+{% load staticfiles %}
 
-<head>
+{% block title %}Escuela Fit{% endblock title %}
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="electivas upiicsa">
-	<meta name="keywords" content=" upiicsa, ejercicios, electivas, ipn ">
-
-    <title>Escuela Fit</title>
-    <link rel="icon" href="img/icono.png">
-
-    <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-
-    <!-- Plugin CSS -->
-    <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
-
-    <!-- Theme CSS -->
-    <link href="css/creative.min.css" rel="stylesheet">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-</head>
-
-<body id="page-top">
-
-    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span> Menú <i class="fa fa-bars"></i>
-                </button>
-                <a class="navbar-brand page-scroll" href="#page-top"> <img src="img/Logo.png" width="200" height="30"> </a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a class="page-scroll" href="#about">Acerca de Escuela FIT</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#services">Usando escuela FIT</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#portfolio">RECOMENDACIONES DE NUTRICIÓN</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#star">COMIENZA YA!</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">CONTACTO</a>
-                    </li>       
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
-
+{% block content %}
     <header>
         <div class="header-content">
             <div class="header-content-inner">
@@ -106,7 +38,7 @@
                     <h2 class="section-heading">Usando Escuela FIT</h2>		
                     <hr class="primary">
                     <h4>Estás a punto de vivir un gran cambio en tu vida, por lo tanto al utilizar Escuela FIT puedes...<br> </br></h4>
-                    <a href="#star" class="btn btn-primary btn-xl page-scroll btn-center">COMIENZA YA!!</a>
+                    <a href="#star" class="btn btn-primary btn-xl page-scroll btn-center">¡COMIENZA YA!</a>
                 </div>
             </div>
         </div>
@@ -150,7 +82,7 @@
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
                     <a href="http://muyfitness.com/subir-escaleras-cuerpo-info_19366/" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive">
+                        <img src="{% static 'img/portfolio/thumbnails/1.jpg' %}" class="img-responsive">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -165,7 +97,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="https://mejorconsalud.com/tipos-de-abdominales-y-para-que-sirven-cada-uno/" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
+                        <img src="{% static 'img/portfolio/thumbnails/2.jpg' %}" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -180,7 +112,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/3.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
+                        <img src="{% static 'img/portfolio/thumbnails/3.jpg' %}" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -195,7 +127,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/4.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
+                        <img src="{% static 'img/portfolio/thumbnails/4.jpg' %}" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -210,7 +142,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/5.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
+                        <img src="{% static 'img/portfolio/thumbnails/5.jpg' %}" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -225,7 +157,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/6.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
+                        <img src="{% static 'img/portfolio/thumbnails/6.jpg' %}" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -258,59 +190,4 @@
             </div>
         </div>
     </section>
-
-    <section id="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">CONTACTO</h2>
-                    <hr class="primary">
-                    <p>Para cualquier información contáctanos.</p>
-                </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>55-50-74-09-51</p>
-                </div>
-                <div class="col-lg-4 text-center">
-                    <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">
-                    escuela_fit@zoho.com</a></p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p><b>¡SIGUE NUESTRAS REDES SOCIALES!</b></p>
-                </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <a href="https://www.facebook.com"><i class="fa fa-3x fa-facebook-square sr-contact"></i></a>
-                    <p>FACEBOOK</p>
-                </div>
-                <div class="col-lg-4 text-center text-center">
-                    <a href="https://www.youtube.com"><i class="fa fa-3x fa-youtube text-center sr-contact" aria-hidden="true"></i></a>
-                    <p>YOUTUBE</p>
-                </div>
-                <div class="col-xs-6 col-lg-6 text-center text-center">           
-                    <img src="img/upiicsa.png"  width="100" height="100" style="margin-left:20px">
-                </div>
-                <div class="col-xs-6 col-lg-6 text-center text-center">
-                    <img src="img/logo_ipn.png"  width="100" height="100" style="margin-left:20px">
-                </div>                
-            </div>
-        </div>
-    </section>
-
-    <!-- jQuery -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
-    <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
-
-    <!-- Theme JavaScript -->
-    <script src="js/creative.min.js"></script>
-
-</body>
-
-</html>
+{% endblock content %}
