--- a/templates/base.html
+++ b/templates/base.html
@@ -36,42 +36,7 @@
         <![endif]-->
     </head>
     <body id="page-top">
-        {% block navbar %}
-            <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
-                <div class="container-fluid">
-                    <!-- Brand and toggle get grouped for better mobile display -->
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                            <span class="sr-only">Toggle navigation</span> Menú <i class="fa fa-bars"></i>
-                        </button>
-                        <a class="navbar-brand page-scroll" href="#page-top"> <img src="{% static 'img/logo.png' %}" width="200" height="30"> </a>
-                    </div>
-
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav navbar-right">
-                            <li>
-                                <a class="page-scroll" href="#about">Acerca de Escuela FIT</a>
-                            </li>
-                            <li>
-                                <a class="page-scroll" href="#services">Usando escuela FIT</a>
-                            </li>
-                            <li>
-                                <a class="page-scroll" href="#portfolio">RECOMENDACIONES DE NUTRICIÓN</a>
-                            </li>
-                            <li>
-                                <a class="page-scroll" href="#star">COMIENZA YA!</a>
-                            </li>
-                            <li>
-                                <a class="page-scroll" href="#contact">CONTACTO</a>
-                            </li>       
-                        </ul>
-                    </div>
-                    <!-- /.navbar-collapse -->
-                </div>
-                <!-- /.container-fluid -->
-            </nav>
-        {% endblock navbar %}
+        {% block navbar %}{% endblock navbar %}
 
         {% block content %}{% endblock content %}
 
