--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -3,6 +3,43 @@
 
 {% block title %}Escuela Fit{% endblock title %}
 
+{% block navbar %}
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span> Menú <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top"> <img src="{% static 'img/logo.png' %}" width="200" height="30"> </a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="page-scroll" href="#about">Acerca de Escuela FIT</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#services">Usando Escuela FIT</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#portfolio">RECOMENDACIONES DE NUTRICIÓN</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#star">¡COMIENZA YA!</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">CONTACTO</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>        
+{% endblock navbar %}
+
 {% block content %}
     <header>
         <div class="header-content">
@@ -182,9 +219,9 @@
                 	<h2>¡COMIENZA YA!</h2>
                 	<p class="text-faded">Porque nuestra salud es lo que nos ayuda a disfrutar la vida día con día, por eso y más, es importante mejorar tu condición física, y que mejor manera de hacerlo junto con Escuela FIT.</p>
                     <br></br> <br></br>
-               		<a href="iniciars.html" class="btn btn-default btn-xl sr-button btn-right" style="margin-left:10px"> Iniciar sesión </a><br>
+               		<a href="{% url 'login' %}" class="btn btn-default btn-xl sr-button btn-right" style="margin-left:10px"> Iniciar sesión </a><br>
 
-               		</br><a href="./reusuario.html" class="btn btn-default btn-xl sr-button btn-right" style="margin-left:15px"> Crear una Cuenta</a>
+               		</br><a href="{% url 'students:create' %}" class="btn btn-default btn-xl sr-button btn-right" style="margin-left:15px"> Crear una Cuenta</a>
                	</div>
               </div>
             </div>
