--- a/templates/main/login.html
+++ b/templates/main/login.html
@@ -1,12 +1,11 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 
-{% block title %}Login{% endblock title %}
+{% block title %}Iniciar Sesión{% endblock title %}
 
 {% block navbar %}
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menú <i class="fa fa-bars"></i>
@@ -14,23 +13,20 @@
                 <a class="navbar-brand page-scroll" href="{% url 'index' %}"> <img src="{% static 'img/logo.png' %}" width="200" height="30"> </a>
             </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a class="page-scroll" href="{% url 'index' %}">INICIO</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="{% url 'students:create' %}">CREAR UNA CUENTA</a>
+                        <a class="page-scroll" href="{% url 'signup' %}">CREAR UNA CUENTA</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">CONTACTO</a>
                     </li>                    
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container-fluid -->
     </nav>      
 {% endblock navbar %}
 
@@ -40,7 +36,7 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">INICIAR SESIÓN</h1>
                 <hr>
-                <p><b><i>Bienvenido, nos da gusto verte. <br> Recuerda que la constancia y el esfuerzo son clave para el éxito.</i></br></i></b></p>
+                <p><b><i>Bienvenido, nos da gusto verte. <br> Recuerda que la constancia y el esfuerzo son clave para el éxito.</i></b></p>
             </div>
             <div class="container">
               <form class="center-content-inner">
