--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -6,7 +6,6 @@
 {% block navbar %}
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menú <i class="fa fa-bars"></i>
@@ -14,7 +13,6 @@
                 <a class="navbar-brand page-scroll" href="#page-top"> <img src="{% static 'img/logo.png' %}" width="200" height="30"> </a>
             </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
@@ -34,9 +32,7 @@
                     </li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container-fluid -->
     </nav>        
 {% endblock navbar %}
 
@@ -221,7 +217,7 @@
                     <br></br> <br></br>
                		<a href="{% url 'login' %}" class="btn btn-default btn-xl sr-button btn-right" style="margin-left:10px"> Iniciar sesión </a><br>
 
-               		</br><a href="{% url 'students:create' %}" class="btn btn-default btn-xl sr-button btn-right" style="margin-left:15px"> Crear una Cuenta</a>
+               		</br><a href="{% url 'signup' %}" class="btn btn-default btn-xl sr-button btn-right" style="margin-left:15px"> Crear una Cuenta</a>
                	</div>
               </div>
             </div>
