--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="escuela fit">
         <meta name="keywords" content="ipn, upiicsa, ejercicios, nutricion, clima">
+        {% block meta %}{% endblock meta %}
+
         <!-- Icon -->
         <link rel="icon" href="{% static 'img/icon.png' %}">
         <!-- Fontastic -->
@@ -36,51 +38,11 @@
         <![endif]-->
     </head>
     <body id="page-top">
-        {% block navbar %}{% endblock navbar %}
+        {% include 'main/navbar.html' %}
 
         {% block content %}{% endblock content %}
 
-        {% block contact %}
-            <section id="contact">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-8 col-lg-offset-2 text-center">
-                            <h2 class="section-heading">CONTACTO</h2>
-                            <hr class="primary">
-                            <p>Para cualquier información contáctanos.</p>
-                        </div>
-                        <div class="col-lg-4 col-lg-offset-2 text-center">
-                            <i class="fa fa-phone fa-3x sr-contact"></i>
-                            <p><a href="tel:5550740951">55-50-74-09-51</a></p>
-                        </div>
-                        <div class="col-lg-4 text-center">
-                            <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                            <p><a href="mailto:escuela_fit@zoho.com">
-                            escuela_fit@zoho.com</a></p>
-                        </div>
-                        <div class="col-lg-8 col-lg-offset-2 text-center">
-                            <p><b>¡SIGUE NUESTRAS REDES SOCIALES!</b></p>
-                        </div>
-                        <div class="col-lg-4 col-lg-offset-2 text-center">
-                            <a href="https://www.facebook.com"><i class="fa fa-3x fa-facebook-square sr-contact"></i></a>
-                            <p>FACEBOOK</p>
-                        </div>
-                        <div class="col-lg-4 text-center text-center">
-                            <a href="https://www.youtube.com"><i class="fa fa-3x fa-youtube text-center sr-contact" aria-hidden="true"></i></a>
-                            <p>YOUTUBE</p>
-                        </div>
-                        <div class="col-xs-6 col-lg-6 text-center text-center">           
-                            <img src="{% static 'img/upiicsa.png' %}"  width="100" height="100" style="margin-left:20px">
-                        </div>
-                        <div class="col-xs-6 col-lg-6 text-center text-center">
-                            <img src="{% static 'img/logo_ipn.png' %}"  width="100" height="100" style="margin-left:20px">
-                        </div>                
-                    </div>
-                </div>
-            </section>
-        {% endblock contact %}
-
-
+        {% include 'main/contact.html' %}
 
         <!-- JQuery -->
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
