--- a/templates/main/navbar.html
+++ b/templates/main/navbar.html
@@ -5,7 +5,11 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span> Menú <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand page-scroll" href="{% url 'profile' %}"> <img src="{% static 'img/logo.png' %}" width="200" height="30"> </a>
+            {% if request.user.is_authenticated %}
+                <a class="navbar-brand page-scroll" href="{% url 'profile' %}"> <img src="{% static 'img/logo.png' %}" width="200" height="30"> </a>
+             {% else %}
+                <a class="navbar-brand page-scroll" href="{% url 'index' %}"> <img src="{% static 'img/logo.png' %}" width="200" height="30"> </a>
+            {% endif %}
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -13,9 +17,6 @@
                 {% if request.user.is_authenticated %}
                     <li {{ profile }}>
                         <a class="page-scroll" href="{% url 'profile' %}">PERFIL</a>
-                    </li>
-                    <li {{ workout }}>
-                        <a class="page-scroll" href="{% url 'workout' %}">RUTINAS</a>
                     </li>
                     <li {{ nutrition }}>
                         <a class="page-scroll" href="{% url 'nutrition' %}">NUTRICIÓN</a>
