--- a/templates/registration/activation_complete.html
+++ b/templates/registration/activation_complete.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
-{% load i18n %}
 
 {% block content %}
-<p>{% trans "Your account is now activated." %}</p>
+    <p>Tu cuenta ha sido activada</p>
 {% endblock %}
