--- a/templates/registration/registration_complete.html
+++ b/templates/registration/registration_complete.html
@@ -1,6 +1,8 @@
-{% extends "base.html" %}
-{% load i18n %}
+{% extends 'base.html' %}
+{% load staticfiles %}
+
+{% block title %}Registro{% endblock title %}
 
 {% block content %}
-<p>{% trans "You are now registered. Activation email sent." %}</p>
-{% endblock %}
+    <p>Para activar tu cuenta da click al enlace que envíamos a tu correo electrónico.</p>
+{% endblock content %}
