--- a/templates/main/weather.html
+++ b/templates/main/weather.html
@@ -34,7 +34,13 @@
 
     <section>
         <div class="container">
-            <div class="row">
+            <p>Contingencia: {{ pollution }}</p>
+            <p>Temperatura actual: {{ weather.temp }} °C</p>
+            <p>Temperatura mínima: {{ weather.temp_min }} °C</p>
+            <p>Temperatura máxima: {{ weather.temp_max }} °C</p>
+            <p>Humedad: {{ weather.humidity }}%</p>
+
+            <!-- <div class="row">
                 <div class="card col-xs-10 col-xs-offset-1 col-lg-8 col-lg-offset-2">
                     <div class="card-image">
                         <figure class="image is-2by1">
@@ -113,6 +119,6 @@
             </div>
             <br>
             <br> <br>
-            <br>
+            <br> -->
     </section>
 {% endblock content %}
