--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -14,10 +14,10 @@
     <h4>Filtrar por:</h4>
         <form method="get">
             <p>
-                Boleta: &nbsp {{ filter.form.boleta }} &nbsp
-                Nombre: &nbsp {{ filter.form.nombre }} &nbsp
-                Apellido Paterno: &nbsp {{ filter.form.apellido_paterno }} &nbsp
-                Apellido Materno: &nbsp {{ filter.form.apellido_materno }} &nbsp;&nbsp;
+                Boleta: &nbsp; {{ filter.form.boleta }} &nbsp;
+                Nombre: &nbsp; {{ filter.form.nombre }} &nbsp;
+                Apellido Paterno: &nbsp; {{ filter.form.apellido_paterno }} &nbsp;
+                Apellido Materno: &nbsp; {{ filter.form.apellido_materno }} &nbsp;&nbsp;
                 <button class="btn btn-success" type="submit">Filtrar</button>
             </p>
         </form>
