Redirect to create student after registration

--- a/templates/main/navbar.html
+++ b/templates/main/navbar.html
@@ -19,7 +19,7 @@
                         <a class="page-scroll" href="{% url 'profile' %}">PERFIL</a>
                     </li>
                     <li {{ nutrition }}>
-                        <a class="page-scroll" href="{% url 'nutrition' %}">NUTRICIÓN</a>
+                        <a class="page-scroll" href="{% url 'nutrition:index' %}">NUTRICIÓN</a>
                     </li>
                     <li {{ weather }}>
                         <a class="page-scroll" href="{% url 'weather' %}">CALIDAD DEL AIRE</a>
