--- a/templates/students/form.html
+++ b/templates/students/form.html
@@ -6,7 +6,7 @@
 
 {% block breadcrumb %}
     <ul class="breadcrumb">
-        <li><a href="{% url 'alumnos:list' %}">Alumnos</a></li>
+        <li><a href="{% url 'students:list' %}">Alumnos</a></li>
         <li class="active">Formulario</li>
     </ul>
 {% endblock breadcrumb %}
@@ -26,7 +26,7 @@
             {% endfor %}
             <br />
             <div class="text-center">
-                <a href="{% url 'alumnos:list' %}" class="btn btn-default">Cancelar</a>
+                <a href="{% url 'students:list' %}" class="btn btn-default">Cancelar</a>
                 <input type="submit" value="Guardar" class="btn btn-success" />
             </div>
         </fieldset>
