--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,17 +1,19 @@
 {% extends "base.html" %}
-{% load i18n %}
+{% load i18n crispy_forms_tags %}
 
 {% block content %}
-    <form method="post" action=".">
-      {% csrf_token %}
-      {{ form.as_p }}
+  <div class="container">
+      <form method="post" action=".">
+        {% csrf_token %}
+        {{ form|crispy }}
 
-      <input type="submit" value="{% trans 'Entrar' %}" />
-      <input type="hidden" name="next" value="{{ next }}" />
-    </form>
+        <input type="submit" value="{% trans 'Entrar' %}" />
+        <input type="hidden" name="next" value="{{ next }}" />
+      </form>
 
-    <p>{% trans "Olvidaste tu contraseña" %}? <a href="{% url 'auth_password_reset' %}">{% trans "Reseteala" %}</a>!</p>
-    <p>{% trans "No tienes una cuenta" %}? <a href="{% url 'registration_register' %}">{% trans "Regístrate" %}</a>!</p>
-    <a href="{% url 'social:begin' 'facebook' %}">Iniciar sesión con Facebook</a>
-    <a href="{% url 'social:begin' 'twitter' %}">Iniciar sesión con Twitter</a>
+      <p>{% trans "Olvidaste tu contraseña" %}? <a href="{% url 'auth_password_reset' %}">{% trans "Reseteala" %}</a>!</p>
+      <p>{% trans "No tienes una cuenta" %}? <a href="{% url 'registration_register' %}">{% trans "Regístrate" %}</a>!</p>
+      <a href="{% url 'social:begin' 'facebook' %}">Iniciar sesión con Facebook</a>
+      <a href="{% url 'social:begin' 'twitter' %}">Iniciar sesión con Twitter</a>
+  </div>    
 {% endblock %}
