--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -1,38 +1,39 @@
 {% extends "../base.html" %}
 
-{% block title %}Info | {{ object.nombre|title }} {{ object.apellido_paterno|title }} {{ object.apellido_materno|title }}{% endblock title %}
+{% block title %}Info | {{ object.name|title }} {{ object.first_surname|title }} {{ object.second_surname|title }}{% endblock title %}
 
 {% block nav_alumnos %}active{% endblock %}
 
 {% block breadcrumb %}
     <ul class="breadcrumb">
-        <li><a href="{% url 'alumnos:list' %}">Alumnos</a></li>
-        <li class="active">{{ object.nombre|title }} {{ object.apellido_paterno|title }} {{ object.apellido_materno|title }}</li>
+        <li><a href="{% url 'students:list' %}">Alumnos</a></li>
+        <li class="active">{{ object.name|title }} {{ object.first_surname|title }} {{ object.second_surname|title }}</li>
     </ul>
 {% endblock breadcrumb %}
 
 {% block content %}
     <div class="jumbotron row">
-        <h1 class="text-center">{{ object.nombre|title }} {{ object.apellido_paterno|title }} {{ object.apellido_materno|title }}</h1>
+        <h1 class="text-center">{{ object.name|title }} {{ object.first_surname|title }} {{ object.second_surname|title }}</h1>
         <br /><br />
         <div class="col-xs-10 col-xs-offset-1 col-sm-12 col-md-10 col-md-offset-1">
-            <p class="col-sm-6"><b>Boleta:</b></p><p class="col-sm-6">{{ object.boleta }}</p>
-            <p class="col-sm-6"><b>Carrera:</b></p><p class="col-sm-6">{{ object.get_carrera_display }}</p>
-            <p class="col-sm-6"><b>Semestre:</b></p><p class="col-sm-6">{{ object.semestre }}</p>
-            <p class="col-sm-6"><b>Nombre:</b></p><p class="col-sm-6">{{ object.nombre|title }}</p>
-            <p class="col-sm-6"><b>Apellido Paterno:</b></p><p class="col-sm-6">{{ object.apellido_paterno|title }}</p>
-            <p class="col-sm-6"><b>Apellido Materno:</b></p><p class="col-sm-6">{{ object.apellido_materno|title }}</p>
-            <p class="col-sm-6"><b>Edad:</b></p><p class="col-sm-6">{{ object.edad }}</p>
-            <p class="col-sm-6"><b>Fecha de nacimiento:</b></p><p class="col-sm-6">{{ object.fecha_nacimiento }}</p>
-            <p class="col-sm-6"><b>Teléfono:</b></p><p class="col-sm-6">{{ object.telefono }}</p>
+            <p class="col-sm-6"><b>Boleta:</b></p><p class="col-sm-6">{{ object.student_number }}</p>
+            <p class="col-sm-6"><b>Carrera:</b></p><p class="col-sm-6">{{ object.get_career_display }}</p>
+            <p class="col-sm-6"><b>Semestre:</b></p><p class="col-sm-6">{{ object.semester }}</p>
+            <p class="col-sm-6"><b>Nombre:</b></p><p class="col-sm-6">{{ object.name|title }}</p>
+            <p class="col-sm-6"><b>Apellido Paterno:</b></p><p class="col-sm-6">{{ object.first_surname|title }}</p>
+            <p class="col-sm-6"><b>Apellido Materno:</b></p><p class="col-sm-6">{{ object.second_surname|title }}</p>
+            <p class="col-sm-6"><b>Edad:</b></p><p class="col-sm-6">{{ object.age }}</p>
+            <p class="col-sm-6"><b>Fecha de nacimiento:</b></p><p class="col-sm-6">{{ object.birthday }}</p>
+            <p class="col-sm-6"><b>Teléfono:</b></p><p class="col-sm-6">{{ object.telephone }}</p>
             <p class="col-sm-6"><b>Email:</b></p><p class="col-sm-6">{{ object.email }}</p>
-            <p class="col-sm-6"><b>Código Tarjeta:</b></p><p class="col-sm-6">{{ object.codigo_tarjeta }}</p>
+            <p class="col-sm-6"><b>Código Tarjeta:</b></p><p class="col-sm-6">{{ object.card_code }}</p>
+            <p class="col-sm-6"><b>User:</b></p><p class="col-sm-6">{{ object.user }}</p>
             <div class="clearfix visible-sm visible-md visible-lg"></div>
         </div>
         <br /><br />
         <div class="col-xs-12 text-center">
-            <a href="{% url 'alumnos:list' %}" class="btn btn-primary">Regresar</a>
-            <a href="{% url 'alumnos:update' object.id %}" class="btn btn-success">Modificar</a>
+            <a href="{% url 'students:list' %}" class="btn btn-primary">Regresar</a>
+            <a href="{% url 'students:update' object.id %}" class="btn btn-success">Modificar</a>
         </div>
     </div>
 {% endblock content %}
