-> Create, detail and list nutrition guides

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,8 +24,7 @@
         <!-- Theme CSS -->
         <link href="{% static 'css/main/creative.css' %}" rel="stylesheet">
         <!-- Static CSS -->
-        <!-- <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> -->
-        <!-- <link rel="stylesheet" href="{% static 'css/style.css' %}"> -->
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
         <title>{% block title %}{% endblock title %}</title>
 
         {% block css %}{% endblock css %}
