-> Link to fonts in base.html | -> Cancel diet creation | -> Remove f-strings to compatibility with older python versions

--- a/templates/nutrition/list.html
+++ b/templates/nutrition/list.html
@@ -25,6 +25,9 @@
 				<h2>{{ diet.schedule }}</h2>
 				<p>{{ diet.create_date }}</p>
 			</a>
+        {% empty %}
+            <p class="lead">Aún no tienes guías de nutrición.</p>
+            <a href="{% url 'nutrition:create' %}">Obtener una guía de nutrición</a>
 		{% endfor %}
 	</div>
 {% endblock %}
