--- a/templates/nutrition/create.html
+++ b/templates/nutrition/create.html
@@ -61,6 +61,7 @@
                                 </div>
                             {% endfor %}
                     </div>
+                    <a href="{% url 'nutrition:cancel' %}" class="btn btn-warning">Cancelar</a>
                     <input type="submit" value="Seleccionar" class="btn btn-primary" />
                 </form><br>
                 <div id="selected"></div>
