--- a/templates/main/profile.html
+++ b/templates/main/profile.html
@@ -49,7 +49,7 @@
                 </div>
                  <div class="col-lg-8 col-lg-offset-2 text-center">
                    <a href="#registros" class="btn btn-primary btn-xl page-scroll btn-center">Consulta tus Registros</a> &nbsp;
-                   <a href="{% url 'nutrition:index' %}" class="btn btn-primary btn-xl page-scroll btn-center">CONSULTAR MI DIETA</a>
+                   <a href="{% url 'nutrition:list' %}" class="btn btn-primary btn-xl page-scroll btn-center">CONSULTAR MI DIETA</a>
                 </div>
             </div>
         </div>
